apps/docs-app/src/components/StackblitzButton/styles.module.css
.logoSvg {
  height: 25px;
  width: 25px;
}

.stackblitzLink {
  display: flex;
  border: var(--ifm-global-border-width) solid var(--ifm-color-secondary);
}

.stackblitzLink:hover {
  color: var(--ifm-color-gray-900);
  background-color: var(--ifm-color-secondary);
}

:root[data-theme='dark'] .stackblitzLink:hover {
  color: var(--ifm-color-white);
  background-color: var(--stackblitz-lightning-color);
  border-color: var(--stackblitz-lightning-color);
}

:root[data-theme='dark'] .stackblitzLink:hover path {
  fill: var(--ifm-color-white);
}

